--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <p class="card-text">Type: Dog</p>
                             <p class="card-text">Age: <span class="age-label bg-success">5 years</span></p>
                             <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                            <a href="pet2.html" class="btn btn-primary">Learn More</a>
+                            <a href="buddyinfo.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                             <p class="card-text">Type: Cat</p>
                             <p class="card-text">Age: <span class="age-label bg-warning">1 year</span></p>
                             <p class="card-text">Gender: <i class="fas fa-female gender-icon" style="color:pink;"></i> Female</p>
-                            <a href="pet3.html" class="btn btn-primary">Learn More</a>
+                            <a href="lunainfo.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                             <p class="card-text">Type: Dog</p>
                             <p class="card-text">Age: <span class="age-label bg-danger">8 years</span></p>
                             <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                            <a href="pet4.html" class="btn btn-primary">Learn More</a>
+                            <a href="maxinfo.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                             <p class="card-text">Type: Cat</p>
                             <p class="card-text">Age: <span class="age-label bg-info">3 years</span></p>
                             <p class="card-text">Gender: <i class="fas fa-female gender-icon" style="color:pink;"></i> Female</p>
-                            <a href="pet5.html" class="btn btn-primary">Learn More</a>
+                            <a href="bellainfo.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                             <p class="card-text">Type: Dog</p>
                             <p class="card-text">Age: <span class="age-label bg-success">6 years</span></p>
                             <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                            <a href="pet6.html" class="btn btn-primary">Learn More</a>
+                            <a href="rockyinfo.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
