--- a/PetShelter/index.html
+++ b/PetShelter/index.html
@@ -645,132 +645,243 @@
 		   </div>
 		   <!--end header wrapper-->
 		<!--start page wrapper -->
-		<div class="page-wrapper">
-			<div class="page-content">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/whiskers.jpg" class="card-img-top" alt="Cat 1">
-                                <div class="card-body">
-                                    <h5 class="card-title">Whiskers</h5>
-                                    <p class="card-text">Type: Cat</p>
-                                    <p class="card-text">Age: <span class="age-label bg-info">2 years</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-female gender-icon" style="color:pink;"></i> Female</p>
-                                    <a href="whiskersinfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/buddy.jpg" class="card-img-top" alt="Dog 1">
-                                <div class="card-body">
-                                    <h5 class="card-title">Buddy</h5>
-                                    <p class="card-text">Type: Dog</p>
-                                    <p class="card-text">Age: <span class="age-label bg-success">5 years</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                                    <a href="buddyinfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/luna.jpg" class="card-img-top" alt="Cat 2">
-                                <div class="card-body">
-                                    <h5 class="card-title">Luna</h5>
-                                    <p class="card-text">Type: Cat</p>
-                                    <p class="card-text">Age: <span class="age-label bg-warning">1 year</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-female gender-icon" style="color:pink;"></i> Female</p>
-                                    <a href="lunainfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/max.jpeg" class="card-img-top" alt="Dog 2">
-                                <div class="card-body">
-                                    <h5 class="card-title">Max</h5>
-                                    <p class="card-text">Type: Dog</p>
-                                    <p class="card-text">Age: <span class="age-label bg-danger">8 years</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                                    <a href="maxinfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/bella.jpg" class="card-img-top" alt="Cat 3">
-                                <div class="card-body">
-                                    <h5 class="card-title">Bella</h5>
-                                    <p class="card-text">Type: Cat</p>
-                                    <p class="card-text">Age: <span class="age-label bg-info">3 years</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-female gender-icon" style="color:pink;"></i> Female</p>
-                                    <a href="bellainfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/rocky.jpg" class="card-img-top" alt="Dog 3">
-                                <div class="card-body">
-                                    <h5 class="card-title">Rocky</h5>
-                                    <p class="card-text">Type: Dog</p>
-                                    <p class="card-text">Age: <span class="age-label bg-success">6 years</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                                    <a href="rockyinfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/rocky.jpg" class="card-img-top" alt="Dog 3">
-                                <div class="card-body">
-                                    <h5 class="card-title">Rocky</h5>
-                                    <p class="card-text">Type: Dog</p>
-                                    <p class="card-text">Age: <span class="age-label bg-success">6 years</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                                    <a href="rockyinfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/rocky.jpg" class="card-img-top" alt="Dog 3">
-                                <div class="card-body">
-                                    <h5 class="card-title">Rocky</h5>
-                                    <p class="card-text">Type: Dog</p>
-                                    <p class="card-text">Age: <span class="age-label bg-success">6 years</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                                    <a href="rockyinfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-4">
-                            <div class="card pet-card">
-                                <img src="images/rocky.jpg" class="card-img-top" alt="Dog 3">
-                                <div class="card-body">
-                                    <h5 class="card-title">Rocky</h5>
-                                    <p class="card-text">Type: Dog</p>
-                                    <p class="card-text">Age: <span class="age-label bg-success">6 years</span></p>
-                                    <p class="card-text">Gender: <i class="fas fa-male gender-icon" style="color:blue;"></i> Male</p>
-                                    <a href="rockyinfo.html" class="btn btn-primary">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+		<div class="container">
+		
+		<h1 class="heading">Dogs for adoption</h1>
+		
+		<div class="box-container">
+		
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog2.jpg">
+				</div>
+				<div class="content">
+					<h3>Roxy</h3>
+					<p>Gender: Female</p>
+					<p>Age: 3 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog3.jpg">
+				</div>
+				<div class="content">
+					<h3>Snuffles</h3>
+					<p>Gender: Male</p>
+					<p>Age: 1 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog4.jpg">
+				</div>
+				<div class="content">
+					<h3>Charles</h3>
+					<p>Gender: Male</p>
+					<p>Age: 10 months old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/cat1.jpg">
+				</div>
+				<div class="content">
+					<h3>Maddy</h3>
+					<p>Gender: Female</p>
+					<p>Age: 3 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/cat2.jpg">
+				</div>
+				<div class="content">
+					<h3>Reggy</h3>
+					<p>Gender: Male</p>
+					<p>Age: 1 year old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/cat3.jpg">
+				</div>
+				<div class="content">
+					<h3>Rosa</h3>
+					<p>Gender: Female</p>
+					<p>Age: 3 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/cat4.jpg">
+				</div>
+				<div class="content">
+					<h3>Aurora</h3>
+					<p>Gender: Female</p>
+					<p>Age: 6 months old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/cat5.jpg">
+				</div>
+				<div class="content">
+					<h3>Tito</h3>
+					<p>Gender: Female</p>
+					<p>Age: 1 year old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
+			</div>
+			<div class="box">
+				<div class="image">
+					<img src="images/dog1.jpg">
+				</div>
+				<div class="content">
+					<h3>Donald</h3>
+					<p>Gender: Male</p>
+					<p>Age: 6 years old</p>
+					<a href="#" class="readbtn">Read more</a>
+				</div>
 			</div>
 		</div>
+		
+		<div id="loadmore">Load More</div>
+		
+	</div>
+	
+	<script>
+	
+	let loadbtn = document.querySelector('#loadmore');
+	let currentItem = 9;
+	
+	loadbtn.onclick = () =>{
+		let box = [...document.querySelectorAll('.container .box-container .box')];
+		for (var i = currentItem; i < currentItem + 9; i++){
+			box[i].style.display = 'inline-block';
+		}
+		currentItem += 9;
+	
+	}
+	
+	</script>
+		
+		
+		
+		
 		<!--end page wrapper -->
 		<!--start overlay-->
 		<div class="overlay toggle-icon"></div>
 		<!--end overlay-->
 		<!--Start Back To Top Button--> <a href="javaScript:;" class="back-to-top"><i class='bx bxs-up-arrow-alt'></i></a>
 		<!--End Back To Top Button-->
-		<footer class="page-footer">
-			<p class="mb-0">Copyright © 2021. All right reserved.</p>
-		</footer>
 	</div>
+	
 	<!--end wrapper-->
 	<!--start switcher-->
 	<div class="switcher-wrapper">
