--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <style>
         .pet-card img {
-            height: 240px; 
+            height: 540px; 
             object-fit: cover;
         }
 
@@ -48,7 +48,7 @@
             border-radius: 5px;
             font-size: 0.8rem;
         }
-        img {
+        .container img {
         	width: 100%;
 			height: 225px;
         }
