--- a/detail.html
+++ b/detail.html
@@ -48,9 +48,9 @@
             border-radius: 5px;
             font-size: 0.8rem;
         }
-        img {
+        .container img {
         	width: 100%;
-			height: 225px;
+			height: auto;
         }
         .left {
         	float: left;
@@ -663,14 +663,22 @@
 </article>
 <script src="data.js"></script>
 <script> 
-let index=getQueryParam('index');
-			if(index===null) window.location.href='data.js.Animal_Data[index].name';
-			else document.getElementById('name').innerHTML= index;
-		
-		function getQueryParam(key){
-			let queryParams=new URLSearchParams(window.location.search);
-			return queryParams.has(key) ? queryParams.get(key) : null;
-		}
+    let index = getQueryParam('index');
+
+    // Ensure index is a valid number
+    if (index === null || isNaN(index) || index < 0 || index >= Animal_Data.length) {
+        window.location.href = 'index.html'; // Redirect if invalid index
+    } else {
+        index = parseInt(index); // Convert string to number
+
+        // Display pet's name instead of just the index
+        document.getElementById('name').innerHTML = Animal_Data[index].name;
+    }
+
+    function getQueryParam(key) {
+        let queryParams = new URLSearchParams(window.location.search);
+        return queryParams.has(key) ? queryParams.get(key) : null;
+    }
 </script>
 </body>
 </html>
