--- a/index.html
+++ b/index.html
@@ -33,11 +33,6 @@
 
 
     <style>
-        .pet-card img {
-            height: 540px; 
-            object-fit: cover;
-        }
-
         .gender-icon {
             font-size: 1.2rem;
             margin-right: 5px;
@@ -51,6 +46,7 @@
         .container img {
         	width: 100%;
 			height: 225px;
+			border-radius: 25%;
         }
         .left {
         	float: left;
